clang/test/BSC/Positive/SafeZone/builtin_usable_at_safezone/owned_raw_transfer.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics

_Safe int * getptr_raw(void);

_Safe void foo(void) {
  int * _Nullable p = __move_to_raw(__take_from_raw(getptr_raw()));
  if (p != nullptr)
    _Unsafe *p = 0;
}
