clang/test/BSC/Negative/SafeZone/global_variable_modification/global_variable_modification_disabled.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int *g;
static int *s;

_Safe void foo(void) {
  // ok
  g = nullptr;

  // ok
  (g) = nullptr;

  // ok
  s = nullptr;

  // ok: reading global variable is always allowed
  int *read_g = g;

  // ok: local pointer variable can be assigned nullptr
  int *p = nullptr;

  // ok: _Borrow pointer variable can be assigned nullptr
  int *_Borrow _Nullable b = nullptr;
}

void test_static_in_function() {
  static int *local_static = nullptr;

  _Safe {
    // ok: reading static variable is allowed
    int *read_static = local_static;

    // ok
    local_static = nullptr;
  }
}

_Safe void test_multiple_assignments(void) {
  int *local1 = nullptr;
  int *local2 = nullptr;

  // ok
  g = local1;
  s = local2;

  // ok: assigning between local variables
  local1 = local2;
}

int main() {
  foo();
  test_static_in_function();
  test_multiple_assignments();
  return 0;
}

// expected-no-diagnostics
